-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.3.9
-
Fix Version/s: 10.3.10
-
Component/s: Storage Engine - InnoDB
-
Labels:
-
Environment:Linux Ubuntu 17.10 but most probably not important.
https://api.travis-ci.org/v3/job/364729376/log.txt
10.3 8334aced009e9748e17ce697191e00c9f14e78b9 |
#3 <signal handler called>
|
#4 0x00007fe726dd1d06 in ?? () from /lib/x86_64-linux-gnu/libc.so.6
|
#5 0x0000000000e081ef in mem_heap_dup (heap=0x7fe6b429c340, data=0x7fe7150040ae, len=4294967294) at /home/travis/src/storage/innobase/include/mem0mem.h:306
|
#6 0x0000000000f51294 in row_log_table_get_pk_col (col=0x7fe6e40ec050, ifield=0x7fe6d8079b30, dfield=0x7fe6b429c410, heap=0x7fe6b429c340, rec=0x7fe71500409a "", offsets=0x7fe7244a5e90, i=6, page_size=..., max_len=3072) at /home/travis/src/storage/innobase/row/row0log.cc:1187
|
#7 0x0000000000f51a91 in row_log_table_get_pk (rec=0x7fe71500409a "", index=0x7fe6e40b05f8, offsets=0x7fe7244a5e90, sys=0x0, heap=0x7fe7244a56f8) at /home/travis/src/storage/innobase/row/row0log.cc:1326
|
#8 0x0000000000f4f460 in row_log_table_delete (rec=0x7fe71500409a "", index=0x7fe6e40b05f8, offsets=0x7fe7244a5e90, sys=0x0) at /home/travis/src/storage/innobase/row/row0log.cc:694
|
#9 0x000000000104f05a in btr_cur_del_mark_set_clust_rec (block=0x7fe711400e00, rec=0x7fe71500409a "", index=0x7fe6e40b05f8, offsets=0x7fe7244a5e90, thr=0x7fe6b423ac40, entry=0x7fe6b42a0f28, mtr=0x7fe7244a6210) at /home/travis/src/storage/innobase/btr/btr0cur.cc:5064
|
#10 0x0000000000fa15d9 in row_upd_del_mark_clust_rec (node=0x7fe6b423a8d8, index=0x7fe6e40b05f8, offsets=0x7fe7244a5e90, thr=0x7fe6b423ac40, referenced=0, foreign=false, mtr=0x7fe7244a6210) at /home/travis/src/storage/innobase/row/row0upd.cc:2979
|
#11 0x0000000000fa1f4b in row_upd_clust_step (node=0x7fe6b423a8d8, thr=0x7fe6b423ac40) at /home/travis/src/storage/innobase/row/row0upd.cc:3161
|
#12 0x0000000000fa2447 in row_upd (node=0x7fe6b423a8d8, thr=0x7fe6b423ac40) at /home/travis/src/storage/innobase/row/row0upd.cc:3282
|
#13 0x0000000000fa2936 in row_upd_step (thr=0x7fe6b423ac40) at /home/travis/src/storage/innobase/row/row0upd.cc:3426
|
#14 0x0000000000f4061b in row_update_for_mysql (prebuilt=0x7fe6b423a0c8) at /home/travis/src/storage/innobase/row/row0mysql.cc:1882
|
#15 0x0000000000df0097 in ha_innobase::delete_row (this=0x7fe6b429c5e8, record=0x7fe6b436e8b8 "\377") at /home/travis/src/storage/innobase/handler/ha_innodb.cc:8957
|
#16 0x0000000000acf3e1 in handler::ha_delete_row (this=0x7fe6b429c5e8, buf=0x7fe6b436e8b8 "\377") at /home/travis/src/sql/handler.cc:6285
|
#17 0x0000000000c623cd in TABLE::delete_row (this=0x7fe6b4334e00) at /home/travis/src/sql/sql_delete.cc:253
|
#18 0x0000000000c5f78b in mysql_delete (thd=0x7fe6b40155c0, table_list=0x7fe6b402c060, conds=0x0, order_list=0x7fe6b4019df8, limit=9, options=549755813888, result=0x0) at /home/travis/src/sql/sql_delete.cc:748
|
#19 0x00000000007dc725 in mysql_execute_command (thd=0x7fe6b40155c0) at /home/travis/src/sql/sql_parse.cc:4918
|
#20 0x00000000007e6364 in mysql_parse (thd=0x7fe6b40155c0, rawbuf=0x7fe6b402bf38 "DELETE FROM `oltp1` LIMIT 9 /* QNO 44526 CON_ID 15 */", length=53, parser_state=0x7fe7244a8450, is_com_multi=false, is_next_command=false) at /home/travis/src/sql/sql_parse.cc:7991
|
#21 0x00000000007d38d8 in dispatch_command (command=COM_QUERY, thd=0x7fe6b40155c0, packet=0x7fe6b4032841 "DELETE FROM `oltp1` LIMIT 9 /* QNO 44526 CON_ID 15 */ ", packet_length=54, is_com_multi=false, is_next_command=false) at /home/travis/src/sql/sql_parse.cc:1841
|
#22 0x00000000007d230b in do_command (thd=0x7fe6b40155c0) at /home/travis/src/sql/sql_parse.cc:1386
|
#23 0x00000000009338df in do_handle_one_connection (connect=0x497d3a0) at /home/travis/src/sql/sql_connect.cc:1402
|
#24 0x0000000000933661 in handle_one_connection (arg=0x497d3a0) at /home/travis/src/sql/sql_connect.cc:1308
|
#25 0x00007fe727860e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
|
#26 0x00007fe726d7c2ed in clone () from /lib/x86_64-linux-gnu/libc.so.6
|
#27 0x0000000000000000 in ?? ()
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7fe6b402bf38): DELETE FROM `oltp1` LIMIT 9 /* QNO 44526 CON_ID 15 */
|
Connection ID (thread ID): 15
|
Status: NOT_KILLED
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on
|
experimental 4feb78e17fbecf7fc7f2847b49b8c66b54879629 |
perl /home/travis/rqg/runall-new.pl --duration=350 --threads=6 --redefine=conf/mariadb/instant_add.yy --reporters=Backtrace,ErrorLog,Deadlock --engine=InnoDB --seed=1523411054 --basedir=/home/travis/server --mysqld=--max-statement-time=30 --mysqld=--loose-debug_assert_on_not_freed_memory=0 --grammar=conf/mariadb/oltp.yy --gendata=conf/mariadb/oltp.zz --duration=300 --mysqld=--innodb-flush-log-at-trx-commit=0 --vardir=/home/travis/logs/vardir1_4
|
Could not reproduce so far.
- is caused by
-
MDEV-16365 Setting a column NOT NULL fails to return error for NULL values when there is no DEFAULT
-
- Closed
-